--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
+    "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thiennbao/onesaltytuna.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/thiennbao/onesaltytuna/issues"
+  },
+  "homepage": "https://github.com/thiennbao/onesaltytuna#readme",
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "node-sass": "^8.0.0",
     "nodemon": "^2.0.20"
   }
 }
