--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "mongoose": "^6.7.5",
     "path": "^0.12.7"
   },
   "devDependencies": {
