--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "one-salty-tuna",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
@@ -30,5 +29,6 @@
   "devDependencies": {
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.20"
-  }
+  },
+  "description": ""
 }
